cmake_minimum_required(VERSION 3.23)
project(NumericalMethods)

set(CMAKE_CXX_STANDARD 14)

add_executable(Dikov
        #"03,04-Hello world/Hello_world.c"
        #"03,04-Hello world/Hello_world.cpp"
        #"05-Hello user/Hello_user.cpp"
        #"06-String copier/String_copier.cpp"
        #"07-Binary search/Binary_search.cpp"
        #"08-Simple number/Simple_number.cpp"
        #"09-Wonder Field/Wonder_field.cpp"
	#"11-Advanced wonder field/advanced_wonder_field.cpp"
        #"12-Factorial/factorial.cpp"
        #"13-Fibbonachi/fibbonachi.cpp"
        #"14-Hanoi/hanoi.cpp"
        #"15-Entertainment bot/entertainment_bot.cpp"
        #"16-Memory control/Three dimensional matrix.cpp"
        #"17-Neuron/main.cpp" "17-Neuron/Neuron.cpp" "17=Neuron/Neuron.h"
        #"18-Swap by links/swap.cpp"
        #"19-HeapSort/HeapSort.cpp"
	#"20-Rectangles/main.cpp" "20-Rectangles/Rectangle.cpp" "20=Rectangles/Rectangle.h"
	#"21-LIFO-FIFO/main.cpp" "21-LIFO-FIFO/CStructure.h" "21-LIFO-FIFO/CStructureWithContainer.h" "21-LIFO-FIFO/CStructureWithContainer.cpp" "21-LIFO-FIFO/FIFO.h" "21-LIFO-FIFO/FIFO.cpp" "21-LIFO-FIFO/LIFO.h" "21-LIFO-FIFO/LIFO.cpp" "21-LIFO-FIFO/templates.cpp"
	#"Machine zero, Epsilon and Infinity/Float double properties.cpp"
	#"Python's slicer/Slicer.cpp"
	#"22-SudokuKiller/sudoku.cpp
	#"23-Debugger/main.cpp" "23-Debugger/CShowable.hpp" "23-Debugger/CPoint2D.cpp" "23-Debugger/CPoint2D.hpp" "23-Debugger/CSong.cpp" "23-Debugger/CSong.hpp" "23-Debugger/CToy.cpp" "23-Debugger/CToy.hpp"
	"24-Store/main.cpp" "24-Store/StoreLib.hpp" "24-Store/Item.hpp" "24-Store/Item.cpp" "24-Store/Fruit.hpp" "24-Store/Fruit.cpp" "24-Store/Milk.hpp" "24-Store/Milk.cpp" "24-Store/Yogurt.hpp" "24-Store/Yogurt.cpp" "24-Store/Cart.hpp" "24-Store/Cart.cpp"
        )
